Accessibility: Fix color contrast (#2872)

--- a/mlflow/server/js/src/antd-override.css
+++ b/mlflow/server/js/src/antd-override.css
@@ -36,3 +36,7 @@
 .ant-table-placeholder {
   z-index: 0;
 }
+
+.ant-collapse-borderless {
+  background-color: white;
+}
