--- a/mlflow/server/js/src/experiment-tracking/components/ExperimentView.css
+++ b/mlflow/server/js/src/experiment-tracking/components/ExperimentView.css
@@ -38,7 +38,7 @@
 
 .ExperimentView-run-buttons .run-count {
   font-size: 14px;
-  color: #888888;
+  color: #6B6B6B;
 }
 
 .ExperimentView-evenRow {
